--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
 
 
 
-    <h1>Messi es mejor que Cristiano, asúmelo</h1>
+    <h1>Las mejores gimnastas, descúbrelas</h1>
 
 
 
-    <img src="images/Messi.png" alt= <img src= "images/Cristiano.png">
+    <img src="images/Simon.png" alt= <img src= "images/Yana.png">
 
     <p> Este es el mejor gol de Messi, contra el Getafe, en el cual parte de su campo regateando a todos los jugadores hasta definir a puerta vacía:</p>
 
-    <div align="center"><iframe src="https://giphy.com/embed/2HavnYT1BfENa" width="400" height="180" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p></div align="center">
+    <div align="center"><iframe src="https://media.giphy.com/media/Dc3ELXtXXmHgk/giphy.gif" width="400" height="180" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p></div align="center">
 
     <div align="left"><p>Esta es una imagen que personalmente me encanta, en la que messi sale con sus 6 balones de oro:</p>
 
      
 
-    <img src="images/Balondeoro.png">
+    <img src="images/Almudena.png">
 
 
 
@@ -206,7 +206,7 @@
 
 
 
-         <img id="cat" src="https://www.gifsanimados.org/data/media/418/pelota-imagen-animada-0044.gif">
+         <img id="cat" src="https://www.gifsanimados.org/data/media/176/gimnasia-imagen-animada-0009.gif">
 
 
 
